# rs-chat

./: Cargo.toml  Makefile  README.md
bash/: client.sh
src/: lib.rs  main.rs  user.rs
